Update author name

--- a/RProj1_Template.Rmd
+++ b/RProj1_Template.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "R Project 1 - Hello R"
-author: "Dr. Katherine Shoemaker"
+author: "Nancy Uroza"
 date: "1/23/2020"
 output: html_document
 ---
@@ -8,7 +8,9 @@ output: html_document
 ### Load packages
 
 ```{r load-packages, message=FALSE}
-library(tidyverse) 
+install.packages("tidyverse")
+library(tidyverse)
+install.packages("datasauRus")
 library(datasauRus)
 ```
 
