Added answer for Ex 1

--- a/RProj1_Template.Rmd
+++ b/RProj1_Template.Rmd
@@ -16,8 +16,7 @@ library(datasauRus)
 
 
 ### Exercise 1
-
-(Type your answer to Exercise 1 here. This exercise does not require any R code. **Remove notes like this in your final product**)
+Based on the help file, the datasaurus_dozen file has 1846 rows and 3 columns (or variables). The variables included in the data frame are: dataset, x and y.
 
 ### Exercise 2
 
